test/typecheck/bad-global-no-init-expr.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module
  (global i32)
  (global (mut f32)))
(;; STDERR ;;;
out/test/typecheck/bad-global-no-init-expr.txt:4:4: error: invalid global initializer expression, must be a constant expression
  (global i32)
   ^^^^^^
out/test/typecheck/bad-global-no-init-expr.txt:5:4: error: invalid global initializer expression, must be a constant expression
  (global (mut f32)))
   ^^^^^^
;;; STDERR ;;)
